k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-prod
  labels:
    environment: prod
    app: employee-management
