k8s/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ems-prod-frontend
  namespace: employee-prod
  labels:
    app: employee-management-frontend
    environment: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: employee-management-frontend
      environment: prod
  template:
    metadata:
      labels:
        app: employee-management-frontend
        environment: prod
    spec:
      containers:
        - name: frontend
          image: employee-management-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "150Mi"
            limits:
              cpu: "250m"
              memory: "300Mi"
