k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: employee-prod
  labels:
    app: employee-management-frontend
    environment: prod
spec:
  type: ClusterIP
  selector:
    app: employee-management-frontend
    environment: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
